--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   Decrease
   </button>
 
-  <div class="text-zinc-900 text-xl" id="counter">0</div>
+  <div class="text-zinc-900 text-xl" id="counter">{{.CounterValue}}</div>
 
   <button 
   hx-target="#counter" 
